--- a/client-app/package.json
+++ b/client-app/package.json
@@ -15,9 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.1",
+    "@mui/joy": "^5.0.0-alpha.89",
     "@mui/material": "^5.14.1",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-date-pickers": "^6.10.1",
+    "@mui/x-date-pickers-pro": "^6.10.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "styled-components": "^5.3.11"
