--- a/server-app/src/main/resources/application.properties
+++ b/server-app/src/main/resources/application.properties
@@ -17,3 +17,6 @@ server.ssl.key-store-type=PKCS12
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
