--- a/client-app/package.json
+++ b/client-app/package.json
@@ -22,13 +22,16 @@
     "@mui/x-date-pickers-pro": "^6.10.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.2",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
