--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/base": "^5.0.0-beta.11",
     "@mui/icons-material": "^5.14.1",
     "@mui/joy": "^5.0.0-alpha.89",
     "@mui/material": "^5.14.1",
