--- a/server-app/src/main/resources/application.properties
+++ b/server-app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8080
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/appbase
+spring.datasource.url= jdbc:postgresql://localhost:5432/wanderstaydb
 spring.datasource.jdbc-url=${spring.datasource.url}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
