--- a/client-app/package.json
+++ b/client-app/package.json
@@ -28,6 +28,7 @@
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.14.2",
     "styled-components": "^5.3.11"
   },
