--- a/client-app/package.json
+++ b/client-app/package.json
@@ -23,6 +23,7 @@
     "@mui/x-date-pickers-pro": "^6.10.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "downloadjs": "^1.4.7",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
@@ -30,9 +31,11 @@
     "react-leaflet": "^4.2.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "xml-formatter": "^3.5.0"
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.3",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
