--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: "3"
 
 services:
 
-  # client-app:
-  #   build:
-  #     context: ./client-app
-  #   container_name: client-app-container
-  #   stdin_open: true
-  #   volumes:
-  #     - ./client-app:/app/client-app
-  #     - /app/client-app/node_modules
-  #   ports:
-  #     - '3000:3000'
+  client-app:
+    build:
+      context: ./client-app
+    container_name: client-app-container
+    stdin_open: true
+    volumes:
+      - ./client-app:/app/client-app
+      - /app/client-app/node_modules
+    ports:
+      - '3000:3000'
 
   database:
     image: postgres:15-alpine
