--- a/client-app/package.json
+++ b/client-app/package.json
@@ -32,6 +32,7 @@
     "react-leaflet": "^4.2.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.14.2",
+    "react-stomp-hooks": "^2.1.0",
     "styled-components": "^5.3.11",
     "xml-formatter": "^3.5.0"
   },
