--- a/server-app/build.gradle
+++ b/server-app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:'
+
+	implementation 'org.springframework.boot:spring-boot-starter-websocket:'
 }
 
 tasks.named('test') {
